--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   align-items: center;
-  top: 0;
+  top: 20px;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #ccc;
